--- a/series.html
+++ b/series.html
@@ -12,20 +12,21 @@
         }
     </style>                                        
 </head>
-<body>
+<body>           <center><img src="k.png" width="800px
+                   " height="200px"></center>
+    
     <h1>
-        <span style="color:#ec111c">  Serie favorita:
+        <span style="color:#ec111c">  Serie favorita: 
     </h1>
-    <a href="https://www.youtube.com/watch?v=AwBpPi1lRRQ">
+    <a href="https://www.youtube.com/watch?v=AwBpPi1lRRQ"> 
     <p> 
         <h2>
         TRAILER <strong></h2>     
     </p></a>
     <a href="https://www.netflix.com/uy/"><img style="width: 400px; height: 400 px;" src="sky3.jpeg"> </img></a>
-    <a href="series.html"></a>   
-    <p>
-
-
+    <a href="series.html">  
+    <p>  
+    
     <p>
         <span style="color:#1127ec"> <strong>Se trata de un formato innovador de serie dramática que combina múltiples géneros, y sus creadores la denominan "pulp latino". 
             ​​ La serie está protagonizada por Verónica Sánchez, Miguel Ángel Silvestre, Asier Etxeandia, Lali Espósito, Yany Prado y Enric Auquer.</strong>
